add block price and adaptive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./index.css">
 
-  <title>Document</title>
+  <title>FUNNY John</title>
 </head>
 
 <body class="root">
@@ -18,6 +18,7 @@
         <div class="header__logo logo">
           FUNNY <span class="header__logo_small logo_small">John</span>
         </div>
+        <div class="header__burger"><span class="header__burger-line"></span></div>
         <nav class="header__nav">
           <ul class="header__list list">
             <li><a>Программа</a></li>
@@ -28,6 +29,7 @@
       </div>
     </header>
     <main class="main">
+
       <div class="offers">
         <div class="offers__wrapper">
           <img class="offers__img" src="./image/yachts.png" alt="три яхты и логотип">
@@ -48,8 +50,79 @@
         </div>
 
       </div>
+
+      <div class="price">
+        <div class="price__wrapper">
+          <h2 class="price__title title">Участие в регате</h2>
+          <div class="price__cards">
+            <div class="price__card card-price">
+              <div class="card-price__title">ЭКО (1&nbsp;человек)</div>
+              <div class="card-price__subtitle">DBL: отели + яхта</div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 3.800</span> Без авиабилета
+              </div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 3.800</span> С авиабилетом
+              </div>
+            </div>
+            <div class="price__card card-price">
+              <div class="card-price__title">БИЗНЕС (1&nbsp;человек)</div>
+              <div class="card-price__subtitle">SNGL: отели</div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 4.650</span> Без авиабилета
+              </div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 5.850</span> С авиабилетом
+              </div>
+            </div>
+            <div class="price__card card-price">
+              <div class="card-price__title">ПРЕМИУМ (8&nbsp;человек)</div>
+              <div class="card-price__subtitle">DBL: отели + яхта</div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 29.600</span> Без авиабилета
+              </div>
+              <div class="card-price__price">
+                <span class="card-price__price_text-size">€ 39.400</span> С авиабилетом
+              </div>
+            </div>
+            <div class="price__card card-price">
+              <div class="card-price__title">ЭКСКЛЮЗИВ (8&nbsp;человек)</div>
+              <div class="card-price__subtitle">SNGL: отели</div>
+              <div class="card-price__price">
+                <spam class="card-price__price_text-size">€ 36.500</spam> Без авиабилета
+              </div>
+              <div class="card-price__price">
+                <spam class="card-price__price_text-size">€ 46.100</spam> С авиабилетом
+              </div>
+            </div>
+          </div>
+          <div class="price__conditions">
+            <div class="price__condition condition">
+              <div class="condition__title">Включено</div>
+              <ul class="condition__list list">
+                <li class="condition__item">Участие в регате на 8-местной яхте Bavaria 46</li>
+                <li class="condition__item">Яхта с профессиональным шкипером</li>
+                <li class="condition__item">Обучение основам парусного спорта</li>
+                <li class="condition__item">Деловая, спортивная и светская программа</li>
+                <li class="condition__item">Проживание в отелях 5* и на яхте</li>
+                <li class="condition__item">Еда, напитки, развлечения, алкоголь</li>
+                <li class="condition__item">Промо кампания и брендинг = логотипы на борту, флаги и командные поло</li>
+              </ul>
+            </div>
+            <div class="price__condition condition">
+              <div class="condition__title">Не включено</div>
+              <ul class="condition__list list">
+                <li class="condition__item">Не включает НДС, оплата по курсу ЦБ + 2%</li>
+                <li class="condition__item">Медицинская страховка</li>
+                <li class="condition__item">Авиабилеты (в зависимости от выбранного пакета)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="gallery">
-        <h2 class="gallery__title">Фотогалерея клуба</h2>
+        <h2 class="gallery__title title">Фотогалерея клуба</h2>
         <div class="gallery__swiper swiper">
           <!-- Additional required wrapper -->
 
@@ -116,7 +189,7 @@
 
 
       <div class="feedback">
-        <h3 class="feedback__title">Отзывы экспертов</h3>
+        <h3 class="feedback__title title">Отзывы экспертов</h3>
         <div class="feedback__swiper swiper">
           <!-- Additional required wrapper -->
 
@@ -135,6 +208,9 @@
                   suspendisse
                   sit in quisque eget. Maecenas urna sollicitudin viverra fermentum donec vulputate. Amet feugiat enim
                   nisi amet integer a at. Et quam neque cursus ultrices euismod. Ipsum massa dolor leo lorem aenean
+                  pulvinar. Nec viverra vel commodo posuere ut feugiat nisi. Ac sed mi dolor dolor ac ultrices tristique
+                  at tellus. Arcu dictum sem pellentesque mattis posuere eget turpis vel. Ut ut posuere ultricies in
+                  Ipsum massa dolor leo lorem aenean
                   pulvinar. Nec viverra vel commodo posuere ut feugiat nisi. Ac sed mi dolor dolor ac ultrices tristique
                   at tellus. Arcu dictum sem pellentesque mattis posuere eget turpis vel. Ut ut posuere ultricies in
                   turpis.</p>
